--- a/docs/README.pod
+++ b/docs/README.pod
@@ -107,15 +107,15 @@ Will still use H.264 if server doesn't support HEVC or AV1.
 
 Try to use yuv444 format.Better color display but not efficiency.
 Note:Now only support hevc(h265) with xvuy format use vaapi platform.
-Need sunshine host support and just support vaapi platform.
+Need sunshine host support and just support vaapi or x11 platform.
 If meet h264+YUV444P, use 'x11' platform instead.
 See games/moonlight-embedded-devel source code directory:
 'sunshine-yuv444-diff'.
 
 =item B<-fakegrab>
 
-Fake grab keyboard and mouse when use not SDL platform.
-Used for not need grab window feature and grab bugs.
+Fake grab keyboard and mouse on embedded(not SDL) platform.
+Not grab window anymore.
 Use Ctrl+Alt+Shift+M to switch.
 
 =item B<-remote> [I<yes/no/auto>]
@@ -153,7 +153,7 @@ By default the gamecontrollerdb.txt provided by Moonlight Embedded is used.
 =item B<-platform> [I<PLATFORM>]
 
 Select platform for audio and video output and input.
-<PLATFORM> can be vaapi, sdl, x11_vaapi, wayland_vaapi, pi or fake etc.
+<PLATFORM> can be vaapi, sdl, x11, x11_vaapi, wayland_vaapi, rk or fake etc.
 
 =item B<-nounsupported>
 
@@ -185,6 +185,15 @@ Enable the I<INPUT> device.
 By default all available input devices are enabled.
 Only evdev devices /dev/input/event* are supported.
 
+=item B<-sdlgp>
+
+Using SDL gamepad driver instead of evdev when using 
+'x11' or 'x11_vaapi'(not sdl) platform.
+
+=item B<-swapxyab>
+
+Swap x/y and a/b for gamepad.Only effected on embedded(not sdl) platform.
+
 =item B<-audio> [I<DEVICE>]
 
 Use <DEVICE> as audio output device on embedded system such as Raspberry Pi.
@@ -196,17 +205,6 @@ Display the stream in a window instead of fullscreen.
 Only available when X11 or SDL platform is used.
 
 =back
-
-=head1 EXAMPLE
-
-Pair:
-  # moonlight pair 192.168.0.1
-
-Connect:
- The following cmd means to connect 192.168.0.1 with a resolution 2560x1600.
-  # moonlight stream -app Desktop -width 2560 -height 1600 192.168.0.1
- The following cmd means to connect 192.168.0.1 with a resolution 1080p and the fps 120.And try to decoding with GPU.
-  # moonlight stream -app Steam -width 1920 -height 1080 -fps 120 -platform 'x11_vaapi' 192.168.0.1
 
 =head1 CONFIG FILE
 
@@ -220,6 +218,21 @@ If no user specified configuration file is available the configuration will be l
 
 A documented example configuration file can be found at /usr/local/etc/moonlight/moonlight.conf.
 
+=head1 GAMEPAD
+
+ Xbox360 controller need xb360gp(4) or 'multimedia/webcamd and cuse(3)'
+ X-input or d-input gamepads need hgame(4) or webcamd.
+ FreeBSD supports some controllers.Please see hgame(4) xb360gp(4) ps4dshock(4) and FreeBSD forums
+ Embedded platforms such as 'x11/x11_vaapi/vaapi' use evdev driver.
+ May be only evdev(not sdl) could support xbox360 seriers on FreeBSD.
+ Use '$ moonlight map -input /dev/input/eventN >> ~/.config/moonlight/gamecontrollerdb.txt' 
+ to create mapping for embedded(not sdl) platform.
+ Or use 'x11/antimicrox' to create mapping for sdl platform.
+ $HOME/.config/moonlight/gamecontrollerdb.txt could be created and used by default.
+
+ Option '-sdlgp' can enable sdl gamepad driver instead of evdev for embedded platform.
+ Note: No rumble feature now.
+
 =head1 KEYBOARD SHORTCUTS
 
  Use Ctrl+Alt+Shift+Q or Play+Back+LeftShoulder+RightShoulder to quit the streaming session.
@@ -227,23 +240,33 @@ A documented example configuration file can be found at /usr/local/etc/moonlight
  Use Ctrl+Alt+Shift+M to fakeGrab/normalGrab keyboard.
  It could not grab the keyboard Using sdl platform.
 
-=head1 GAMEPAD
+=head1 EXAMPLE
 
-FreeBSD supports fewer controllers.Please see hgame(4) xb360gp(4) ps4dshock(4) and FreeBSD forums...
-SDL has better behavior for gamepad.
-Use 'moonlight map -input /dev/input/eventN' or use 'x11/antimicrox' to create mapping.
-$HOME/.config/moonlight/gamecontrollerdb.txt could be created and used by default.
+Pair:
+  # moonlight pair 192.168.0.1
+
+Connect:
+ The following cmd means to connect 192.168.0.1 with a resolution 2560x1600.
+  # moonlight stream -app Desktop -width 2560 -height 1600 192.168.0.1
+ The following cmd means to connect 192.168.0.1 with a resolution 1080p and the fps 120.And try to decoding with GPU.
+  # moonlight stream -app Steam -width 1920 -height 1080 -fps 120 \ 
+                     -platform 'x11_vaapi' 192.168.0.1
+  Do not want grab keyboard and mouse:
+  # moonlight stream -app Desktop -width 1920 -height 1080 -fps 120 \
+                     -platform 'vaapi' -fakegrab 192.168.0.1
 
 =head1 COMMENTS
 
-Platform 'sdl' and 'x11' is soft decoding.'x11' is deprecated.
-Platform '*vaapi' is hard accel decoding.
-If you want to use GPU decoding for intel gpu,you must do:
-  1.Use platform 'x11_vaapi' or 'wayland_vaapi' or 'vaapi'
-  2.Install package:libva-intel-driver/libva-intel-media-driver.
+ Platform 'sdl' and 'x11' is soft decoding.
+ Only platform 'x11/vaapi/x11_vaapi/wayland' support yuv444 video mode.
+ Only some gpu support yuv444 video mode. And need sunshine host support.
+ Platform '*vaapi' is decoding by gpu.
+ If you want to use GPU decoding for intel gpu,you must do:
+   1.Use platform 'x11_vaapi' or 'wayland_vaapi' or 'vaapi'
+   2.Install package:libva-intel-driver/libva-intel-media-driver.
 
-Multi keyboard may meet bugs.Please man kbdmux or kbdcontrol.
-And try to disable kbdmux.
+ Multi keyboard may meet bugs.Please man kbdmux or kbdcontrol.
+ And try to disable kbdmux or use -input to specify wanted keyboards or mouses.
 
 =head1 AUTHOR
 
